kubernetes/media/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: media
  labels:
    app.kubernetes.io/name: romm
spec:
  selector:
    app.kubernetes.io/name: romm
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
